package com.kumorai.nexo.report.entity;

public enum ReportStatus {
    PENDIENTE,
    EN_REVISION,
    RESUELTO,
    DESCARTADO
}
