package com.kumorai.nexo.report.entity;

public enum ReportType {
    ERROR_HORARIO,
    CAMBIO_SALON,
    INFORMACION_INCORRECTA,
    OTRO
}
